# yugi-analyzer

./: .gitignore  Cargo.toml  Shuttle.toml  reset_context.txt  update_reset.txt
.githooks/: post-push  pre-commit
.github/workflows/: shuttle.yml
src/: handlers.rs  lib.rs  main.rs  models.rs  services.rs  templates.rs
static/: script.js  style.css
static/js/: main.js  search.js
templates/: index.html
templates/components/: generic-info.html  header.html  search-card.html  table-analysis.html  table-card.html
tests/: handlers_test.rs  http_routes.rs  models_test.rs  services_test.rs  templates_test.rs
tools/: update_reset  update_reset.rs
