[package]
name = "yugi-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tera = "1.19"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.45", features = ["full"] }
futures-util = "0.3.31"
shuttle-actix-web = "0.55"
shuttle-runtime = "0.55"
chrono = "0.4.41"
